Add time to each item for screen readers
Screen readers don't have the same ability to visually scan for the time
slot the item is in. Instead, add the time to each item.

--- a/src/App.css
+++ b/src/App.css
@@ -759,6 +759,17 @@ input.switch:checked ~ label:after {
   white-space: nowrap;
 }
 
+.item-start-time {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
 .item-permalink {
   float: right;
 }
